--- a/authentication-service/src/main/resources/bootstrap.yml
+++ b/authentication-service/src/main/resources/bootstrap.yml
@@ -7,6 +7,17 @@ spring:
   application:
     name: authorization-service
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sservex@gmail.com
+    password: vxpvrjpmomawoddl
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
   cloud:
     config:
@@ -20,4 +31,3 @@ spring:
         max-interval: 2000
         max-attempts: 6
         multiplier: 1.1
-
