--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -67,6 +67,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- Dependencia para el filtro de logs -->
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
