--- a/data-service/authorization-service.yml
+++ b/data-service/authorization-service.yml
@@ -2,6 +2,8 @@ server:
   port: 9000
 
 spring:
+
+  ## Base de datos
   datasource:
     url: jdbc:mysql://localhost:3306/authorization_db_service?allowPublicKeyRetrieval=true&useSSL=false&allowMultiQueries=true&serverTimezone=UTC
     username: dev
