--- a/data-service/authorization-service.yml
+++ b/data-service/authorization-service.yml
@@ -7,12 +7,12 @@ auth:
 
 
 ## Java Key Store
-keystore:
-  path: keystore.jks # O la ruta relativa/absoluta donde hayas colocado el archivo
-  password: Mul7899968@@@ # La contraseña que elegiste para el keystore
-
-key:
-  alias: jwtkey # El alias que usaste al generar la clave
+#keystore:
+#  path: keystore.jks # O la ruta relativa/absoluta donde hayas colocado el archivo
+#  password: Mul7899968@@@ # La contraseña que elegiste para el keystore
+#
+#key:
+#  alias: jwtkey # El alias que usaste al generar la clave
 
 spring:
 
