--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -144,6 +144,12 @@
 
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
